# __VACUUMMS__

./: .gitignore  APPLICATIONS_USER_GUIDE.md  CMakeLists.txt  DEVELOPER_GUIDE.md  IO_FORMATS.md  Makefile  README  README.md  RELEASE_NOTES.md  ROADMAP.md  USER_GUIDE.md  UTILITIES_USER_GUIDE.md  package.py
applications/: CMakeLists.txt  README.md  raxmlhpc_for_frank.tgz
applications/2pc/: README.md  cav2vis.c  cfg2vis.c
applications/apocrypha/clep/: Makefile  clep
applications/apocrypha/cpld/: CavityPath.cpp  CavityPath.h  _Makefile  edges.h  io.c  tmp.out
applications/apocrypha/crys-gen/: cg.gfg  crystal_generator.c  ddsg
applications/apocrypha/dds/: cg  command_line_parser.c.bak  command_line_parser.h.bak  convergence.c  dds.c  fcc.cfg  io_setup.c
applications/apocrypha/drp_class/: boltzmann.c  chains.c  one_length.c  tmp  working.circles.c
applications/apocrypha/essence/: essence_kernel.cu
applications/apocrypha/fv/: fv.cu
applications/apocrypha/fv2fv/: _Makefile
applications/apocrypha/genels/: CUDAEnergy.cu  HAB6FDA-11215.hst  ThreadMain.c  genels.c  io.c  qrun
applications/apocrypha/grafv/: Makefile  grafv  greetings.c
applications/apocrypha/lj/: _Makefile  command_line_parser.c  graphics.c  io_setup.h  lj_main.c
applications/apocrypha/lnd/: _Makefile  fcc.lnd  fcc.pov  fcc25.lnd  fccg  io_setup.c  lnd.c  sea-22Feb2005.c  sea.c  sizes.lst
applications/apocrypha/matrix/: _Makefile  matrix.c.bak  matrix2d.c
applications/apocrypha/nanopore/: Makefile  nanopore.h
applications/apocrypha/nrg/: energy.c  io_setup.c  nrg.c  nrg.h
applications/apocrypha/rarify/: _Makefile
applications/apocrypha/sv/: _Makefile  old.cv.c
applications/apocrypha/utrw/: He-PS.sh
applications/apocrypha/walk/: walk-03282005.c  walk.c  walk2
applications/archive/2pc/: 2pc.c  2pc.h  Makefile  io_setup.c  io_setup.h
applications/archive/cav2cluster/: cav2cluster.c  cav2cluster.c.bak.bak  cav2cluster.h
applications/archive/clep/: test
applications/archive/cpld/: Cavity.cpp  Cavity.h  CavityGraph.cpp  CavityGraph.h  cpld  cpld.c  edges.c  io.h
applications/archive/crys-gen/: Makefile  convergence.c  ddsg.c  fcc_generator.c  io_setup.c
applications/archive/dds/: 215.cfg  (+5 more)
applications/cav2cluster/: Makefile  _cav2cluster.c  cav2cluster.c  cav2cluster.c.bak  cav2cluster.pack
applications/center/: Makefile  center.c  center.c.bak  center.h
applications/clep/: README  a.out  clep.c  test.c
applications/csd/: 215.cav  _Makefile  command_line_parser.c  command_line_parser.h  csd  csd.c
applications/ddx/: Makefile  _ddx.c  dddx.c  dddx.h  ddx.c  fcc.cav  io_setup.c  pddx.c  pddx.h
applications/eg/: 2net.c  graphics.c  host.c  malloc.c  time.c
applications/end2end/: end2end.c
applications/essence/: essence.c
applications/examples/: 4d-array.c  generate_distribution.c
applications/ftw_examples/: CopyBackAndForth.cu  hello.cu  helloCUDA.cu  mpi_round.c  speed.cu
applications/ftw_samples/: device_info.cu  hybrid.c  pthreads.c  read_random.c  simple.cu  streamToUpper.cu  sum.cu  symbol.cu  with_dim3.cu
applications/fv/: Makefile
applications/genels/: CommandLineOptions.c  HAB6FDA-11215.err  He-PS-11216.err  He-PS-11216.hst  Makefile  Verlet.c  genels  genels.h  readPolymerConfiguration.c  readit  readit.c  run-PS
applications/grafv/: grafv.c  greetings  start.sh
applications/greetings/: greetings.c
applications/hs/: Makefile  _command_line_parser.c  command_line_parser.c  command_line_parser.h  graphics.c  hs  hs_main.c  io_setup.c
applications/launcher/: Makefile  README  hello  hello.f  launcher  launcher.c  launcher.lsf  launcher.pbs  launcher.poe  mpi_launcher.tar  mxm  mxm.c  paramlist
applications/lj/: energy.h  io_setup.c  lj
applications/ljx/: Makefile  command_line_parser.c  energy.c  energy.h  io_setup.c  io_setup.h  ljx  ljx_main-01122005.c  ljx_main.c  ljx_main.h  x.hst
applications/matrix/: NOTES.txt  matrix.c  xmatrix.c  xmatrix2d.c
applications/mfp/: Makefile  mfp  mfp-05Apr2005.c  mfp.c  mfp.h
applications/mlp/: mlp.cu  mpi_mlp.c
applications/numa/: Makefile  numa.cu  numa.linkinfo  run-numa.sh
applications/pmd/: _Makefile  allgo.c  bmd.c  pmd.c  pmd.hst  pw-3Nov2005.c  sdlj-mfp.c  sdlj.c  sdlj2p.c  test.gfg
applications/pmdgpu/: pmdgpu-2.1.1.tar
applications/rattle/: Makefile  _rattlj.c  rattle.c  rattlj.c
applications/rog/: rog.c  rog.h
applications/sdhs/: _Makefile  a.out  graphics.c  io_setup.c  sdhs  sdhs_main.c  test.c
applications/size/: _Makefile  size.c
applications/sv/: boxv.c  boxv.h  cell_volume.h  csa.c  cv.c  pack  sample  sample.c  spackle.c
applications/utrw/: He-PS2.sh  Makefile  gmon.out  test.cfg  utrw.c  utrwt.c  utrwt69  utrwt69-debug  utrwt69.c  utrwt69u.c
libraries/: CMakeLists.txt
libraries/deprecated_fvi/: .sample.prm.swp  .test.c.swp  Makefile  README  example  example.c  ftw_gfg2fvi.cu  ftw_gfg2fvi.h  ftw_gfgEnergy.c  ftw_gfgEnergy.h
libraries/ftw_cuda/: Makefile  ftw_cuda.h  ftw_cuda_utils.cu  ftw_gfg2fvi.cu
libraries/ftw_general/: _Makefile  ftw_command_line_parser.c  ftw_param.c  ftw_rng.c  ftw_rng2.c  ftw_science.h  ftw_std.c  ftw_std.h  ftw_types.h  test.c
libraries/ftw_pov/: Makefile  _Makefile  _ftw_povheader.c  ftw_povheader.c
libraries/ftw_tiff/: Makefile  _Makefile  example  example.c  ftw_makeTIFF.c  ftw_makeTIFF.h
libraries/general/: Makefile  NOTES.TXT  ftw_cav_parser.c  ftw_config_parser.c  ftw_config_parser.h  ftw_prng.c  ftw_rng.h  ftw_rng2.c  ftw_rng2.h  ftw_std.h  test.c
utils/: CMakeLists.txt  Makefile  README  _Makefile  __stack_tiffs.c  _fvi2pov.c  _gfg2fvi.c  _gfg2pov.c  _gfgc2pov.c  _readtiff.c  _stack_tiffs.c  a.out  a2b.c  add.c  avg.c  cav2pov.c  cfg2gfg.c  cfg2vis.c  clustercat.c  cram.c  cull2.c  dst2hst.c  expr_add.c  expr_multiply.c  ftw_cuda  ftw_cuda.c  fvi2pov.c  fvi2tiff.c  gfg2fvi.c  gfg2pov.c  gfgc2pov.c  log10.c  maltest  maltest.c  max.c  min.c  miss.c  nsplit.c  povheader.c  pow.c  (+23 more)
utils/apocrypha/: cull.c  maltest.cu
utils/vis/: Makefile  README  cav2vis  command_line_parser.h  graphics.c  test.c  tst.vis  vis  vis.c
(+238 files in other folders)
